# nesoi

./: .build.yml  CMakeLists.txt  setup.py
bindings/python/: CMakeLists.txt  barycenters.h  degree.cpp  kdistance.cpp  nesoi.cpp  numpy-traits.h  tmt.cpp  tmt.h
bindings/python/nesoi/: __init__.py  plot.py
examples/: CMakeLists.txt  simple.cpp
examples/gaussians/: cluster-gaussians-degree.py  cluster-gaussians-kdistance.py  cluster-gaussians.py
include/nesoi/: kd-tree.h  kd-tree.hpp  parallel.h  search-functors.h  triplet-merge-tree.h  triplet-merge-tree.hpp
